--- a/projects/lecture1/trial.html
+++ b/projects/lecture1/trial.html
@@ -38,7 +38,7 @@
     </ol>
     <a href='aaron.niskin.org'><em>aaron</em>.niskin.org</a>
     <h2><a href='aaron.niskin.org'>aaron.niskin.org</a></h2>
-    <img src='/img/linus-jet.png' alt="Linus Torvalds in a fighter jet">
+    <img src='linus-jet.png' alt="Linus Torvalds in a fighter jet">
   </body>
 </html>
 
