--- a/projects/lecture4/index.html
+++ b/projects/lecture4/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='import' id='templates-import' href='/templates.html'>
+    <link rel='import' id='templates-import' href='/templates/projects.html'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
     <script src="/js/coder.js"></script>
@@ -55,7 +55,7 @@
     <project-step title="Get like me">
       <p>Being that basic familiarity with HTML, CSS, and using CSS frameworks is a requirement for this lesson, we will not go too far to explain these concepts in this lesson. To exemplify this point, using MaterializeCSS, make your page look like the image below. Note that there are divs underneath each of the two buttons. These two buttons should have IDs to clearly identify them, and so should the two divs below them. The divs below are where we will be putting our user input.</p>
       <p>There is also a div below the text "If you were to concatenate ... would read:". This div is where we will be placing the concatenated text, and should have an appropriate ID as well.</p>
-      <img src='/img/l4-layout.png' alt='page layout' class='img-responsive'>
+      <project-img src='layout.png' alt='page layout'>
       <p>In order to make our lives easier down the road, let's put the "0" from the bottom line (where the total number of changes will be displayed) inside of a <code>span</code> with an appropriate ID as well.</p>
       <p>For the A students, you might want to set the <code>overflow</code> property of our left and right text divs to <code>auto</code>. This makes it so scroll bars appear when needed.</p>
       <pre class='hint blur'>&#60;!DOCTYPE html>
