--- a/projects/lecture4/trial.html
+++ b/projects/lecture4/trial.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      Lecture 5: Intro to JS
+      Intro to JS
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
     <style>
@@ -17,7 +17,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class='brand-logo'>Lecture 5: Intro to Javascript</a>
+        <a href="#" class='brand-logo'>Intro to Javascript</a>
       </div>
     </nav>
     <div class='container'>
