--- a/projects/lecture5/trial.html
+++ b/projects/lecture5/trial.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      Lecture 6
+      Odds or Evens
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -22,39 +22,8 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </button>
-          <a class='navbar-brand' href='#home'>L6: Odds or Evens</a>
+          <a class='navbar-brand' href='#home'>Odds or Evens</a>
         </div>
-        <div class='collapse navbar-collapse' id='bs-collapse-1'>
-          <ul class='nav navbar-nav'>
-            <li class='active'><a href='#prereqs'>Prereqs<span class='sr-only'>(current)</span></a></li><li><a href="#">Link</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" 
-                 class="dropdown-toggle" 
-                 data-toggle="dropdown" 
-                 role="button" 
-                 aria-haspopup="true" 
-                 aria-expanded="false">Lectures<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/assessments/lecture1.html">Lecture 1</a></li>
-                <li><a href="/assessments/lecture2.html">Lecture 2</a></li>
-                <li><a href="/assessments/lecture3.html">Lecture 3</a></li>
-                <li><a href="/assessments/lecture4.html">Lecture 4</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="/assessments/lecture5.html">Lecture 5</a></li>
-                <li><a href="/assessments/lecture6.html">Lecture 6</a></li>
-                <li><a href="/assessments/lecture7.html">Lecture 7</a></li>
-                <li><a href="/assessments/lecture8.html">Lecture 8</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="/assessments/lecture9.html">Lecture 9</a></li>
-                <li><a href="/assessments/lecture10.html">Lecture 10</a></li>
-                <li><a href="/assessments/lecture11.html">Lecture 11</a></li>
-                <li><a href="/assessments/lecture12.html">Lecture 12</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class='container'>
