--- a/index.html
+++ b/index.html
@@ -59,12 +59,48 @@
         <project-advert></project-advert>
       </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="welcome" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Welcome to the Coder's Corner Projects Project (working title)</h4>
+          </div>
+          <div class="modal-body">
+            <h2>Welcome to our humble corner.</h2>
+            <p>If you are new to programming, this series of projects should get you coding in no time! Just be sure to follow our guides and we'll get you there. The general guidelines for getting the most out of these projects is listed below. Aside from that, I hope you enjoy them and feel free to send us any feedback!</p>
+            <ul>
+              <li>Always try to solve the problems on your own before checking out our solutions
+                <ul>
+                  <li>Remember, there are generally many solutions to every problem, so don't get discouraged if your solution looks different from ours. Just make sure it has the same functionality.</li>
+                  <li>Since there is no associated grade, there's really no reason to cheat. That doesn't mean that you should never look at the solutions to help yourself out when you're stuck though... My suggestion is if you feel like you're going in circles and can't find a solution, take a 5 minute break. Drink some tea, do some pushups, do something to get your mind completely off of coding, then come back with a fresh mindset. If you still can't figure it out after 15 minutes, check out our solution.</li>
+                </ul>
+              </li>
+              <li>If you do check out our solution, be sure to truely understand the solution. Don't just copy/paste. Mess around with it a bit. Understand each aspect of it.</li>
+              <li>Have fun!</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Okay!</button>
+          </div>
+        </div>
+      </div>
+    </div>
 	</body>
 </html>
 
 <!--script src='/js/fractals.js' id='background'>
 </script-->
-<script src="/js/main.js"></script>
+<script>
+$(document).ready(function() {
+  $('#welcome').modal('show');
+});
+$('.modal button').click(function() {
+  $('#welcome').modal('hide');
+});
+</script>
 <!--script>
 init('bg-canvas');
 window.onresize = resizeCanvas;
