fixed scrolling on landing page

--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
 $(document).ready(function() {
   $('#welcome').modal('show');
   $(document).keydown(function() {
-    if (event.keyCode == 74 || event.keyCode == 83 || event.keyCode == 40) {
-      console.log("test");
+    if (event.keyCode == 74 || event.keyCode == 83 || event.keyCode == 40) { // J or S or DownArrow
+      $('body').scrollTop($('body').scrollTop() + 40);
+    } else if (event.keyCode == 75 || event.keyCode == 87) {
+      $('body').scrollTop($('body').scrollTop() - 40);
     }
   });
 });
