In progress... Fixed clickable buttons on landing page (mobile hidden)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
 
     <!-- Modal -->
+    <h1 class='hidden'>Welcome modal</h1>
     <div class="modal fade" id="welcome" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
