fixed mail link

--- a/projects/howto/coming-soon.html
+++ b/projects/howto/coming-soon.html
@@ -6,4 +6,4 @@
   </head>
   <body>
     <h2>This functionality is not yet available. Please check back with us soon.</h2>
-    <p>Until then, please feel free to <a href="mailto:amniskin@fvi.edu">email</a> us any code project ideas you may have. Be sure to include your name, email address and project information (including the code).</p>
+    <p>Until then, please feel free to email us at <a href="mailto:amniskin@fvi.edu">amniskin@fvi.edu</a> with any code project ideas you may have. Be sure to include your name, email address and project information (including the code).</p>
