working on eloquentJS/index.html

--- a/index.html
+++ b/index.html
@@ -35,15 +35,7 @@
         </project-showcase>
         <project-showcase name="lecture5" tag="Get even with JavaScript">
           <li>Basic HTML, CSS, and CSS Framework understanding</li>
-          <li>Basic JavaScript understanding
-            <ul>
-              <li>Variable declaration</li>
-              <li>Function declaration</li>
-              <li>string concatenation</li>
-              <li>Prompt user for input</li>
-              <li>Display HTML via JavaScript</li>
-            </ul>
-          </li>
+          <li>Very basic JavaScript understanding</li>
           <li>180 cat videos seen on YouTube</li>
         </project-showcase>
         <project-showcase name="lecture6" tag="Functional and elegant">
@@ -52,7 +44,6 @@
         </project-showcase>
         <project-showcase name="lecture7" tag="Destroy the mold">
           <li>Basic HTML, CSS, and CSS Framework understanding</li>
-          <li>Understanding forms and form submissions</li>
           <li>Basic JavaScript and jQuery understanding</li>
           <li>200 cat videos seen on YouTube</li>
         </project-showcase>
